<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menu_calendar"
        android:icon="@drawable/ic_menu_calendar"
        android:showAsAction="ifRoom"
        android:title="@string/calendar"/>
    <item
        android:id="@+id/menu_scan"
        android:icon="@drawable/ic_menu_scan"
        android:showAsAction="ifRoom"
        android:title="@string/scan"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_menu_search"
        android:showAsAction="ifRoom"
        android:title="@string/search"/>

</menu>