<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dosageQuantityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/dosage_quantity_label" />

        <EditText
            android:id="@+id/dosageQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dosage_quantity"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dosageFrequencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/dosage_frequency_label" />

        <EditText
            android:id="@+id/dosageFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dosage_frequency"
            android:maxLines="1"
            android:textSize="16sp"
            android:singleLine="true"
            android:imeOptions="actionNext" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dosageRouteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/dosage_route_label" />

        <EditText
            android:id="@+id/dosageRoute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dosage_route"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dosageInstructionsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/dosage_instructions_label" />

        <EditText
            android:id="@+id/dosageInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dosage_instructions"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dosageDurationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/dosage_duration_label" />

        <EditText
            android:id="@+id/dosageDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dosage_duration"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dosageReasonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/dosage_reason_label" />

        <EditText
            android:id="@+id/dosageReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dosage_reason"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dosageWarningsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/dosage_warnings_label" />

        <EditText
            android:id="@+id/dosageWarnings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dosage_warnings"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSavePressed"
            android:text="@string/dosage_save" />
    </LinearLayout>
    
</LinearLayout>