<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/dosageText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:hint="@string/dosage_text_hint"
            android:imeOptions="actionDone"
            android:maxLines="1" />

        <Button
            android:id="@+id/parseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onParse"
            android:text="@string/dosage_text_parse" />
    </LinearLayout>
    
   	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/skipButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSkip"
            android:text="@string/dosage_skip" />
    </LinearLayout>

</LinearLayout>